@@ -1,5 +1,5 @@
 /***************************************************************************
- *   Copyright (C) 2015 by James M Anderson                                *
+ *   Copyright (C) 2015, 2016 by James M Anderson                                *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
